--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -179,7 +179,7 @@
     <string name="about_author">"Авторы: "</string>
     <string name="about_author_contributors">и сотрудники.</string>
     <string name="about_affiliation">В сотрудничестве с</string>
-    <string name="privacy_friendly">Это программа принадлежит к группе Privacy Friendly Apps, разработанных Technische Universität Darmstadt. Исходный код лицензирован под GPLv3. Право на использование изображений принадлежит TU Darmstadt и Google Inc.</string>
+    <string name="privacy_friendly">Это программа принадлежит к группе Privacy Friendly Apps, разработанных SECUSO. Исходный код лицензирован под GPLv3. Право на использование изображений принадлежит SECUSO и Google Inc.</string>
     <string name="more_info">Дополнительная информация (на английском языке):</string>
 
 
