--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -179,7 +179,7 @@
     <string name="about_author">"Autori: "</string>
     <string name="about_author_contributors">un līdzstrādnieki.</string>
     <string name="about_affiliation">Sadarbībā ar</string>
-    <string name="privacy_friendly">Šī lietotne ir SECUSO izstrādātā no Privacy Friendly Apps lietotņu kataloga. Bilžu autortiesības pieder SECUSO un Google Inc.</string>
+    <string name="privacy_friendly">Šī lietotne ir no SECUSO izstrādātā Privacy Friendly Apps lietotņu kataloga. Bilžu autortiesības pieder SECUSO un Google Inc.</string>
     <string name="more_info">Papildus informācija (angļu valodā):</string>
 
 
