Updates copyright in app strings.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -179,7 +179,7 @@
     <string name="about_author">"Autor: "</string>
     <string name="about_author_contributors">y contribuidores.</string>
     <string name="about_affiliation">En asociación con</string>
-    <string name="privacy_friendly">Esta aplicación pertenece al grupo Privacy Friendly Apps desarrolladas por el grupo SECUSO del Instituto de Tecnología de Karlsruhe. Código fuente bajo licencia GPLv3. Autores de las imágenes TU Darmstadt y Google Inc.</string>
+    <string name="privacy_friendly">Esta aplicación pertenece al grupo Privacy Friendly Apps desarrolladas por el grupo SECUSO del Instituto de Tecnología de Karlsruhe. Código fuente bajo licencia GPLv3. Autores de las imágenes KIT y Google Inc.</string>
     <string name="more_info">Más información puedes encontrar:</string>
 
 
