--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -271,4 +271,10 @@
     <string name="pref_ref_types_summary">Sie können bestimmte Kategorien von vordefinierten Referenzobjekten ausblenden lassen. Diese werden dann nicht im Menü bei der Referenzobjektwahl angezeigt.</string>
     <string name="pref_ref_editor_summary">Hier können Sie (bis zu 10) nutzerdefinierte Referenzobjekte anlegen und verwalten.</string>
     <string name="select_image_from_gallery">Bild aus der Galerie auswählen</string>
+	<string name="dialog_goodbye_google_title">Wir verlassen Google Play __</string>
+	<string name="dialog_goodbye_google_desc">Unsere Apps m_ssen sich leider von Google Play verabschieden. Sie k_nnen die App weiterhin nutzen, erhalten jedoch keine Updates mehr.
+Weitere Informationen zu den Gr_nden und warum das nicht das Ende der Privacy Friendly Apps ist, finden Sie auf unserer Website:
+
+<a href="https://secuso.aifb.kit.edu/2809.php">Hier klicken, um mehr zu erfahren</a></string>
+	<string name="dialog_goodbye_google_deactivate_notice">Zeige diese Mitteilung nicht nochmal</string>
 </resources>
