--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -275,11 +275,7 @@
     <string name="pref_ref_types_summary">You can disable certain types of predefined reference objects. They won\'t show up in the menu during reference object choice.</string>
     <string name="pref_ref_editor_summary">Here you can define and manage user defined reference objects (up to 10).</string>
     <string name="select_image_from_gallery">Select image from gallery</string>
-	<string name="dialog_goodbye_google_title">Goodbye Google Play __</string>
-	<string name="dialog_goodbye_google_desc">Our apps will have to say goodbye to Google Play. You can continue to use the app but you will not receive any updates in the future.
-You can find more info about the reasons and why this isn_t the end of the Privacy Friendly Apps on our website:
-
-<a href="https://secuso.aifb.kit.edu/english/2809.php">Click here to learn more</a>
-	</string>
+	<string name="dialog_goodbye_google_title">Goodbye Google Play 😢</string>
+	<string name="dialog_goodbye_google_desc">Our apps will have to say goodbye to Google Play. You can continue to use the app but you will not receive any updates in the future.\nYou can find more info about the reasons and why this isn\'t the end of the Privacy Friendly Apps on our website:\n\n<a href="https://secuso.aifb.kit.edu/english/2809.php">Click here to learn more</a></string>
 	<string name="dialog_goodbye_google_deactivate_notice">Don\'t show this notice again.</string>
 </resources>
